Fixed button sizing/layout on small mobile screens

--- a/public/scss/_contact.scss
+++ b/public/scss/_contact.scss
@@ -247,3 +247,30 @@ $primary-gradient: linear-gradient(135deg, #743ad5 0%, #d53a9d 100%);
     }
   }
 }
+
+@media only screen and (max-width: 350px) {
+  .contact {
+    .contact-inner-grid {
+      .contact-inner-grid-item {
+        .static-contact-info {
+          ul {
+            li {
+              margin: 0.4rem 0;
+
+              h3 {
+                font-size: 1.6rem;
+              }
+              a {
+                font-size: 1.2rem;
+                i {
+                  display: none;
+                  font-size: 1.3rem;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
